# synthris

./: .dockerignore  .gitignore  .mise.toml  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci-pr.yml  deploy-main.yml
crates/synthris-cli/: Cargo.toml
crates/synthris-cli/src/: main.rs  video.rs
crates/synthris-core/: Cargo.toml
crates/synthris-core/profiles/organisms/: morrow.toml  quill.toml  solen.toml
crates/synthris-core/src/: engine.rs  lib.rs  plate.rs  profiles.rs  request.rs  roi.rs
crates/synthris-core/src/engine/: background.rs  codec.rs  growth.rs  models.rs  optics.rs  rng.rs  seeding.rs  shape.rs  timeline.rs  trace_metrics.rs
crates/synthris-plate-assets/: Cargo.toml
crates/synthris-plate-assets/src/: lib.rs
crates/synthris-ris-agent/: .env.example  Cargo.toml  Dockerfile  README.md  fly.prod.toml  fly.staging.toml  openapi.json
crates/synthris-ris-agent/src/: config.rs  job_parser.rs  main.rs  mapping.rs  ris_client.rs  runner.rs
crates/synthris-wasm/: Cargo.toml
crates/synthris-wasm/src/: lib.rs
docs/: perf-workflow.md
profiles/illumination/: backlit.toml  frontlit.toml
profiles/organisms/: morrow.toml  quill.toml  solen.toml  zenth.toml
profiles/plates/: omnitray-bottom-1.toml  omnitray-top-1.toml  petri-default.toml  petridish-bottom-1.toml  petridish-top-1.toml
web/: README.md  index.html  package.json  vite.config.js
web/scripts/: build-wasm.sh  sync-ffmpeg-core.sh
web/src/: main.js  renderer.js  sim-state.js  style.css
