[workspace]
members = [
    "crates/synthris-core",
    "crates/synthris-plate-assets",
    "crates/synthris-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
image = "0.25"
pprof = { version = "0.14", features = ["flamegraph", "prost-codec"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
turbojpeg = { version = "1.4", features = ["cmake"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
