[package]
name = "synthris-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
synthris-core = { path = "../synthris-core" }
synthris-plate-assets = { path = "../synthris-plate-assets" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
